# moose

./: .gitignore  README.md  changes.md  new_environment.yml  pyproject.toml
.github/workflows/: black.yml
configs/: peptune_config.yaml
src/moose/eval_analysis/: evaluate_molecules.py
src/moose/models/: diffusion.py  finetune.py  finetune_peptides.py  generate_mcts.py  noise_schedule.py  peptide_mcts.py  roformer.py  sampler.py
src/moose/scoring/: scoring_functions.py
src/moose/scoring/functions/mol_functions/: mol_oracles.py
src/moose/scoring/functions/pep_functions/: binding.py  hemolysis.py  nonfouling.py  permeability.py  solubility.py
src/moose/tokenizer/: my_tokenizers.py
src/moose/utils/: app.py  binding_utils.py  bracket_safe_converter.py  ema.py  finetune_utils.py  metrics.py  plotting.py  scoring_utils.py  timer.py  utils.py  utils_chem.py  utils_data.py  utils_moco.py  utils_save.py
