[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moose"
version = "0.1.0"
description = "TR2D2 molecular generation models"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Programmable Biology Group"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core PyTorch ecosystem
    # Note: PyTorch with CUDA 12.4 support should be installed from:
    # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
    "torch>=2.6.0,<2.7.0",
    "torchvision>=0.21.0,<0.22.0",
    "torchaudio>=2.6.0,<2.7.0",
    "torchmetrics>=0.11.0",
    
    # Scientific computing
    "numpy>=1.26.0,<1.27.0",
    "pandas>=2.2.0,<2.3.0",
    "scipy>=1.13.0,<1.14.0",
    "scikit-learn>=1.0.0",
    
    # Machine learning frameworks
    "lightning>=2.5.5,<2.6.0",
    "pytorch-lightning>=2.5.5,<2.6.0",
    "xgboost>=3.0.5,<3.1.0",
    "bionemo-moco==0.0.2.1",
    
    # Configuration management
    "hydra-core>=1.3.2,<1.4.0",
    "hydra-submitit-launcher>=1.2.0,<1.3.0",
    "omegaconf>=2.3.0,<2.4.0",
    "pyyaml>=6.0",
    
    # Transformers and language models
    "transformers>=4.56.2,<4.57.0",
    "fair-esm>=2.0.0,<2.1.0",
    "timm>=1.0.20,<1.1.0",
    
    # Tokenization
    "SmilesPE>=0.0.3,<0.1.0",
    
    # Data handling
    "datasets>=2.18.0,<2.19.0",
    "fsspec>=2023.0.0",
    
    # Chemistry and molecular tools
    # Note: RDKit is typically installed via conda (conda install -c conda-forge rdkit)
    # but rdkit-pypi is available on PyPI as an alternative
    #"rdkit-pypi>=2023.0.0",
    "safe-mol>=0.1.0",
    "PyTDC>=0.4.1,<0.5.0",
    "openbabel-wheel>=0.1.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "loguru>=0.7.3,<0.8.0",
    "easydict>=1.10",
    "pathos>=0.3.2,<0.4.0",
    "joblib>=1.3.0",
    "jaxtyping>=0.2.0",
    
    # Visualization and plotting
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pillow>=10.0.0",
    
    # Experiment tracking
    "wandb>=0.22.0,<0.23.0",
    
    # Jupyter
    "jupyterlab>=4.0.0",
    
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/programmablebio/moose"
Repository = "https://github.com/programmablebio/moose"
Documentation = "https://github.com/programmablebio/moose#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moose = ["**/*.txt", "**/*.json", "**/*.yaml", "**/*.yml"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

